--- a/kernal/product_form.html
+++ b/kernal/product_form.html
@@ -85,7 +85,9 @@
                                     }
                                     
                                 },
-                                error: function(data){ },
+                                error: function(data){
+									//alert("ERROR");
+								},
                                 complete: function(data){ 
                                 },
                             });            
