--- a/kernal/product_list.html
+++ b/kernal/product_list.html
@@ -1,11 +1,5 @@
 {% extends "product.php.html" %}
 
-{% block left_link %}
-    {% for name,link in main_link.items %}
-            <div class='span-6 last'><a href='{{link}}'>{{name|upper}}</a></div>
-    {% endfor%}
-{% endblock %}
-
 {% block content %}
         <div class="span-24">
             <div class="span-20">
@@ -28,6 +22,17 @@
                     </div>
             </div>
             
+            <div class="span-24" class="paging">
+                <div class="span-24">
+					{% for p in page_range %}
+						{% if p == page %}
+							<b>[{{p}}]</b>
+						{% else %}
+							<a href="/product/search/?page={{p}}">[{{p}}]</a>
+						{% endif %}
+					{% endfor %}
+                </div>
+            </div>			
             <div class="span-24" id="updown">
                 <div class="span-4">
                     <input type="checkbox" id="clickAll">Product Name
@@ -76,9 +81,9 @@
                     {{product.type}}
                 </div>
 
-                <div class="span-3">$ {{product.price}}</div>
+                <div class="span-3">$ {{product.retail_price}}</div>
 
-                <div class="span-3">{{product.barcode}}</div>
+                <div class="span-3">{{product.barcode}}&nbsp;</div>
 
                 <div class="span-2">
                     <a name="modal" href="/product/update/{{product.pk}}">Edit</a>
@@ -86,6 +91,17 @@
             </div>
     {% endfor %}
 	            </form>
+            </div>				
+            <div class="span-24" class="paging">
+                <div class="span-24">
+					{% for p in page_range %}
+						{% if p == page %}
+							<b>[{{p}}]</b>
+						{% else %}
+							<a href="/product/search/?page={{p}}">[{{p}}]</a>
+						{% endif %}
+					{% endfor %}
+                </div>
             </div>				
 {% endblock %}
 
