--- a/trunk/kernal/product_form.html
+++ b/trunk/kernal/product_form.html
@@ -25,7 +25,7 @@
                                       </th>
                                       <td>
                                         <select name="category" id="id_category">                                      
-                                          <option value="" selected="selected">---------
+                                          <option value="{{product.category.pk}}" selected="selected">{{product.category}}
                                           </option>                                      
                                         </select>
                                       </td>
@@ -37,7 +37,7 @@
                                       </th>
                                       <td>
                                         <select name="brand" id="id_brand">                                      
-                                          <option value="" selected="selected">---------
+                                          <option value="{{product.brand.pk}}" selected="selected">{{product.brand}}
                                           </option>                                      
                                         </select>
                                       </td>
@@ -49,7 +49,7 @@
                                       </th>
                                       <td>
                                         <select name="type" id="id_type">                                      
-                                          <option value="" selected="selected">---------
+                                          <option value="{% if product.type.pk == None %}-1{% endif %}{{product.type.pk}}" selected="selected">{{product.type}}
                                           </option>                                      
                                         </select>
                                       </td>
@@ -97,9 +97,9 @@
                                     category_val = $(this).val();
                                 });                            
                                 $("#id_brand option").remove();
-                                $("#id_brand").append("<option value=\"\" selected=\"selected\">---------</option>");
+                                $("#id_brand").append("<option value=\"-1\" selected=\"selected\">---------</option>");
                                 $("#id_type option").remove();
-                                $("#id_type").append("<option value=\"\" selected=\"selected\">---------</option>");                                
+                                $("#id_type").append("<option value=\"-1\" selected=\"selected\">---------</option>");                                
                                 for( var i = 0 ; i < categoryTable["kernal.brand"].length ; i++){
                                     var category = categoryTable["kernal.brand"][i].fields.category;
                                     if(category == parseInt(category_val)){
@@ -116,7 +116,7 @@
                                     brand_val = $(this).val();
                                 });                            
                                 $("#id_type option").remove();
-                                $("#id_type").append("<option value=\"\" selected=\"selected\">---------</option>");
+                                $("#id_type").append("<option value=\"-1\" selected=\"selected\">---------</option>");
                                 for( var i = 0 ; i < categoryTable["kernal.type"].length ; i++){
                                     var brand = categoryTable["kernal.type"][i].fields.brand;
                                     if(brand == parseInt(brand_val)){
