--- a/trunk/kernal/bill.html
+++ b/trunk/kernal/bill.html
@@ -141,7 +141,7 @@ th,td{
               </tr>    
               <tr>        
                 <td class="Receipt label">            Cashier<span>:</span>          </td>        
-                <td class="Receipt">            <b>{{bill.user.username}}        </b></td>        
+                <td class="Receipt">            <b>{{bill.sales_by.username}}        </b></td>        
                 <!---->        
                 <td class="Receipt label" >            Paid By<span>:</span>         </td>        
                 <td class="Receipt" >             <b>{{bill.payment_set.select_related.0.term}}</b>  {{bill.payment_set.select_related.0.transaction_no}}        </td>    				
