--- a/kernal/report.html
+++ b/kernal/report.html
@@ -28,7 +28,7 @@
       <li>Sales Report
          <ol>
             <li><a href="/sales/cash/filter/"> Cash Sales</a></li>
-            <li><a href="/sales/do/filter/"> Invoice and Delivery Orders</a></li>
+            <li><a href="/sales/invoice/filter/"> Invoice and Delivery Orders</a></li>
          </ol>
       </li>      
       <li>Return Report
