update counter_list.html urls

--- a/kernal/counter_list.html
+++ b/kernal/counter_list.html
@@ -13,7 +13,7 @@
             </div>
 
             <div class="span-4 last">
-                <a href="/admin/kernal/counter/add/" name="modal" id="modal">Open Counter</a>
+                <a href="/admin/kernal/counter/add/">Open Counter</a>
             </div>
         <form id="deleteForm" action="{{submit_form}}" method="get">
             <div class="span-24" style="border-top:1px solid gray">
