--- a/trunk/kernal/consignment_out_form.html
+++ b/trunk/kernal/consignment_out_form.html
@@ -4,50 +4,15 @@
 {% endblock %}
 
 {% block hiddenValue %}
-    <input type="hidden" name="salesMode" value="cash"/>
+    <input type="hidden" name="salesMode" value="Consignment"/>
 {% endblock %}
 
 {% block title %}
-        <div id="page_title" style="margin-bottom:8px;">Sales Register
+        <div id="page_title" style="margin-bottom:8px;">Consignment OutStock
         </div>  
 {% endblock %}
 
 {% block mode_form %}
-          <div id="mode_form">
-            <span>Register Mode
-            </span>  
-            <select name="mode" onchange="$('#mode_form').submit();">  
-              <option value="sale" selected="selected">Sale
-              </option>  
-              <option value="trade-in">Trade-in
-              </option>  			  
-              <option value="warranty">Warranty
-              </option>  
-            </select>
-          </div>  
-{% endblock %}
-
-{% block search_bar %}
-            <label id="item_label" for="item">    Find/Scan Item
-            </label>  
-            <input type="text" name="item" value="" id="item" size="40" onclick="return false;"/>
-{% endblock %}
-
-{% block table_header %}
-            <thead>  
-              <tr>  
-                <th style="width:auto">Item #
-                </th>  
-                <th style="width:auto">Item Name
-                </th>  
-                <th style="width:11%;">Price
-                </th>  
-                <th style="width:11%;">Qty.
-                </th>  
-                <th style="width:15%;">Amount
-                </th>  
-              </tr>  
-            </thead> 
 {% endblock %}
 
 {% block bill_infor %}
@@ -183,43 +148,4 @@
         <div class="clearfix" style="margin-bottom:30px;">&nbsp;
         </div>      
       </div>  
-{% endblock %}
-
-
-{% block ajaxSubmitCheck %}
-    if($("#customer").val()==''){
-        alert("Please fulfill customer field.");
-		return false;
-    }        
-	return true;
-{% endblock %}
-
-{% block ajaxGenTableBody %}
-			var IMEI_str = "";
-			if (data.imei != undefined){
-				IMEI_str =  " <br/> IMEI:  <input type=text name=\""+pk+"_imei\" id=\""+pk+"_imei\" value=\""+data.imei+"\" readonly=true size=\"18\" style=\"border: none; background: transparent;\"/>";
-			}
-			row = ""+
-					"<tr id=\""+pk+"_tr\">"+
-					"<td><a href='#' id='removeItem' onclick=\"removeItem('"+pk+"')\"><img src='/static/images/delete.png' /></a> "+data.fields.barcode+"</td>"+
-					"<td id=\""+pk+"_productName\">["+data.fields.name +"] "+data.fields.description + IMEI_str +"</td>"+    <!-- [<span id=\""+pk+"_stockCount\"></span> in stock]</td>  for batch sales only-->
-					"<td><input type=\"text\" name=\""+pk+"_price\" id=\""+pk+"_price\" value=\""+data.fields.retail_price+"\" size=\"6\" onkeyup=recalcAll('"+pk+"') onblur=lowerCostDetact('"+pk+"'); /></td>"+
-					"<td><input type=\"text\" name=\""+pk+"_quantity\" id=\""+pk+"_quantity\" value=\"1\" size=\"2\"  onkeyup=recalcAll('"+pk+"') onChange=resetQuantityField('"+pk+"') /></td>"+
-					"<td>$<span id=\""+pk+"_amount\" class='totalPrice'>"+data.fields.retail_price+"</span><input type=\"hidden\" name=\""+pk+"_pk\" id=\""+pk+"_pk\" value=\""+data.pk+"\" /></td>"+
-					"</tr>"
-			;    
-			return row;
-{% endblock %}
-
-{% block ajaxCheckBeforeSend %}
-		var msg = '';
-		for(var pk in productTable){
-			var price = parseFloat($("#"+pk+"_price").val());
-			var cost = parseFloat(productTable[pk].fields.cost);
-			if(cost > price){
-				msg += productTable[pk].fields.name + ' PRICE: $'+price+' lower than COST: $'+ cost + ' \n'
-			}
-		}
-		ans = confirm(msg + " \n Are you sure?");
-		if(!ans){ return; }
 {% endblock %}
