--- a/trunk/kernal/stock.html
+++ b/trunk/kernal/stock.html
@@ -22,10 +22,20 @@
       <li>Stock Control
          <ol>
             <li><a href="/inventory/list/">Receiving Stock</a></li>
+<!--			
             <li><a href="/inventory/list/">Stock Take</a></li>
-			<li><a href="/inventory/list/">Stock Adjust</a></li>
+			<li><a href="/inventory/list/">Stock Adjust</a></li> -->
          </ol>
       </li>
+      <li>Consignment
+         <ol>
+			<li><a href="/consignment/in/">InStock Received</a></li>
+			<li><a href="/consignment/in/balance">InStock Return Issue</a></li>
+			<li><a href="/consignment/out/">OutStock Issue</a></li>
+			<li><a href="/consignment/out/balance">OutStock Return Received</a></li>
+            <li><a href="/consignment/out/balance">OutStock Report</a></li>
+         </ol>
+      </li>	  
    </ol>
 </div>
 </div>
