--- a/kernal/cash_sales_list.html
+++ b/kernal/cash_sales_list.html
@@ -41,6 +41,14 @@
                   <td><a href="/sales/bill/{{payment.bill.pk}}" target="_blank">Show</a></td>
               </tr>  			
 			{%endfor%}
+              <tr>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td>Total Price:</td>
+                  <td>{{total}}</td>
+                  <td></td>
+              </tr>  			            
             </tbody>  	
           </table>  
         </div>  
