--- a/kernal/sales.html
+++ b/kernal/sales.html
@@ -27,8 +27,8 @@
       </li>
       <li>Bills
          <ol>
-            <li><a href="/sales/cash/filter/">Receipt</a></li>
-			<li><a href="/sales/invoice/filter/">Invoice and Delivery Order</a></li>
+            <li><a href="/search/cashsales/">Receipt</a></li>
+			<li><a href="/search/invoice/">Invoice and Delivery Order</a></li>
          </ol>
       </li>	  
    </ol>
