--- a/trunk/kernal/sales.html
+++ b/trunk/kernal/sales.html
@@ -29,6 +29,7 @@
          <ol>
             <li><a href="/search/cashsales/">Receipt</a></li>
 			<li><a href="/search/invoice/">Invoice and Delivery Order</a></li>
+            <li><a href="/search/imei/">IMEI Search</a></li>
          </ol>
       </li>	  
    </ol>
