--- a/kernal/inventory_base.html
+++ b/kernal/inventory_base.html
@@ -162,6 +162,7 @@
 {% endblock %}
 
 {% block ajaxCheckBeforeSend %}
+        if(_checkInputData() == false){ return; }
 		ans = confirm("Are you sure?");
 		if(!ans){ return; }
 {% endblock %}
