--- a/kernal/report.html
+++ b/kernal/report.html
@@ -22,6 +22,7 @@
       <li>Summary Report
          <ol>
             <li><a href="/report/daily/filter/"> Daily Sales</a></li>
+            <li><a href="/report/daily/category/filter/"> Daily Sales Summary</a></li>            
             <li><a href="/report/person/filter/">Personal Sales</a></li>
          </ol>
       </li>
