--- a/kernal/stock.html
+++ b/kernal/stock.html
@@ -22,20 +22,26 @@
       <li>Stock Control
          <ol>
             <li><a href="/inventory/list/">Receiving Stock</a></li>
-<!--			
-            <li><a href="/inventory/list/">Stock Take</a></li>
-			<li><a href="/inventory/list/">Stock Adjust</a></li> -->
+            <li><a href="/report/stocktake/filter">Stock Take</a></li>
+			<li><a href="/stock/adjust/">Stock Adjust</a></li>
+            <li><a href="/report/inventory/filter/">Inventory Receipt Report</a></li>
          </ol>
       </li>
-      <li>Consignment
+      <li>Consignment InStock
          <ol>
 			<li><a href="/consignment/in/">InStock Received</a></li>
 			<li><a href="/consignment/in/balance">InStock Return Issue</a></li>
-			<li><a href="/consignment/out/">OutStock Issue</a></li>
-			<li><a href="/consignment/out/balance">OutStock Return Received</a></li>
-            <li><a href="/consignment/out/balance">OutStock Report</a></li>
+            <li><a href="/report/consignment/in/balance/filter/">InStock Report</a></li>            
          </ol>
       </li>	  
+      <li>Consignment OutStock
+         <ol>
+			<li><a href="/consignment/out/">OutStock Issue</a></li>
+            <li><a href="/consignment/out/balance">OutStock Balance</a></li>                        
+			<li><a href="/consignment/out/sales">OutStock Sales Issue</a></li>
+            <li><a href="/report/consignment/out/balance/filter/">OutStock Report</a></li>
+         </ol>
+      </li>	        
    </ol>
 </div>
 </div>
