append counter ReCalc append UpdateCost condition (all counter had close)

--- a/branches/refactory-1.0/kernal/inventory_result.html
+++ b/branches/refactory-1.0/kernal/inventory_result.html
@@ -3,6 +3,7 @@
 {% endblock %}
 
 					{% block PageTitle %}
+						<div id="error_msg">{{error_msg}}</div>
 						<div id="PageTitle">
 							Receiving Record
 						</div>					
