--- a/branches/refactory-1.0/kernal/stock_base.html
+++ b/branches/refactory-1.0/kernal/stock_base.html
@@ -296,7 +296,8 @@
     function calcTotalPrice(){
         subTotal = $("#subTotal").val();
         discount = $("#discount").val();
-        $("#total").attr("value", (subTotal-discount));
+        deposit =  $("#deposit").val();
+        $("#total").attr("value", (subTotal-discount-deposit));
     }
     function calcChange(){
         total = $("#total").val();
