--- a/branches/refactory-1.0/kernal/bill.html
+++ b/branches/refactory-1.0/kernal/bill.html
@@ -179,6 +179,14 @@ th,td{
 				<td colspan="5" id="bill_detail">
                 {% block bill_detail %}
 					<table>   
+							<tr>
+							<td class="Receipt itemno"> Binding Extra Cost : </td>
+							<td class="Receipt"><input type="text" name="extraCost"/></td>
+							<td class="right qty"></td>
+							<td align="right" class="price"></td>
+							<td align="right" class="price"></td>
+							</tr>                            
+                    
 						  <tr>        
 							<td colspan="5" class="border-bottom"></td>    
 						  </tr>   
@@ -201,7 +209,14 @@ th,td{
 							<td align="right" class="price">{{outStockRecord.unit_sell_price}}</td>
 							<td align="right" class="price">{{outStockRecord.amount}}</td>
 							</tr>
-						{% endfor %}			  
+						{% endfor %}
+							<tr id="extra_cost_area">
+							<td class="Receipt itemno"> {{forloop.counter}} {{outStockRecord.product.name}}</td>
+							<td class="Receipt">{{outStockRecord.product.description}} {% if  outStockRecord.serial_no.serial_no %}<span style="font-weight: bolder; padding: 0 0 0 1em"> IMEI: {{outStockRecord.serial_no.serial_no}}</span>{% endif %}</td>
+							<td class="right qty">{{outStockRecord.quantity}}</td>
+							<td align="right" class="price">{{outStockRecord.unit_sell_price}}</td>
+							<td align="right" class="price">{{outStockRecord.amount}}</td>
+							</tr>                            
 					</table>				
                 {% endblock %}
 				</td>
