--- a/branches/refactory-1.0/kernal/sales.html
+++ b/branches/refactory-1.0/kernal/sales.html
@@ -25,6 +25,7 @@
 			<li><a href="/invoice/list/">Invoice</a></li>
 			 <li><a href="/deposit/add/">Deposit</a></li>
              <li><a href="/service/add/">Service</a></li>
+             <li><a href="/repair/add/">Repair</a></li>
          </ol>
       </li>
       <li>Bills
@@ -34,6 +35,7 @@
             <li><a href="/search/imei/">IMEI Search</a></li>
             <li><a href="/search/deposit/">Deposit</a></li>
             <li><a href="/search/service/">Service</a></li>
+            <li><a href="/search/repair/">Repair</a></li>
          </ol>
       </li>	  
    </ol>
