--- a/branches/refactory-1.0/kernal/consignment_in_balance_form.html
+++ b/branches/refactory-1.0/kernal/consignment_in_balance_form.html
@@ -2,7 +2,7 @@
 
 
 {% block hiddenValue %}
-		  <input type="hidden" name="mode" value="ConsignmentInReturn"/>
+		  <input type="hidden" name="mode" value="Consignment_IN_Return"/>
 {% endblock %}
 
 {% block title%}
