--- a/branches/refactory-1.0/kernal/consignment_out_form.html
+++ b/branches/refactory-1.0/kernal/consignment_out_form.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block hiddenValue %}
-    <input type="hidden" name="salesMode" value="Consignment"/>
+    <input type="hidden" name="mode" value="Consignment_OUT"/>
 {% endblock %}
 
 {% block title %}
